Node, Edge, and NeuralNetwork classes created

--- a/RNNReLU.ipynb
+++ b/RNNReLU.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -15,7 +15,8 @@
     "import pandas as pd\n",
     "import datetime\n",
     "import time\n",
-    "import math"
+    "import math\n",
+    "import numpy as np"
    ]
   },
   {
@@ -33,10 +34,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Get a list of all items\n",
@@ -48,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -61,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -91,32 +90,32 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Cannonball</td>\n",
+       "      <th>3</th>\n",
+       "      <td>10</td>\n",
+       "      <td>Cannon barrels</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>6</td>\n",
-       "      <td>Cannon base</td>\n",
+       "      <th>4</th>\n",
+       "      <td>12</td>\n",
+       "      <td>Cannon furnace</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>8</td>\n",
-       "      <td>Cannon stand</td>\n",
+       "      <th>5</th>\n",
+       "      <td>28</td>\n",
+       "      <td>Insect repellent</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   id          name\n",
-       "0   2    Cannonball\n",
-       "1   6   Cannon base\n",
-       "2   8  Cannon stand"
+       "   id              name\n",
+       "3  10    Cannon barrels\n",
+       "4  12    Cannon furnace\n",
+       "5  28  Insect repellent"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -140,15 +139,16 @@
      "output_type": "stream",
      "text": [
       "Query List:\n",
-      "     id        name\n",
-      "0  1741     Leather\n",
-      "1     2  Cannonball\n"
+      "      id              name\n",
+      "0  11802  Armadyl godsword\n",
+      "1    554         Fire rune\n",
+      "2   1761         Soft clay\n"
      ]
     }
    ],
    "source": [
     "#Use this to pull a specific items by name\n",
-    "names = ['Leather','Cannonball']\n",
+    "names = ['Armadyl godsword','Fire rune', 'Soft clay']\n",
     "\n",
     "#read the itemKey csv and parse the key for associated item ids\n",
     "data = pd.read_csv('./itemKey.csv', skiprows=[])\n",
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -172,22 +172,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Item Id - 1741: Leather\n",
+      "Item Id - 11802: Armadyl godsword\n",
+      "Got fucked. Trying again. :)\n",
+      "Got fucked. Trying again. :)\n",
       "It worked! On to the next one.\n",
-      "Item Id - 2: Cannonball\n",
+      "Item Id - 554: Fire rune\n",
+      "Got fucked. Trying again. :)\n",
+      "Got fucked. Trying again. :)\n",
+      "Got fucked. Trying again. :)\n",
+      "It worked! On to the next one.\n",
+      "Item Id - 1761: Soft clay\n",
+      "Got fucked. Trying again. :)\n",
       "It worked! That was the last item!\n"
      ]
     }
    ],
    "source": [
     "i = 0\n",
-    "j = 0\n",
+    "firtIteration = True\n",
     "urlquery = pd.DataFrame(columns=['id', 'name', 'data'])\n",
     "#Iterate through all items, grab data from api and append to urlquery dataframe\n",
     "while(i<inputdata['id'].count()):\n",
     "    key = inputdata.iloc[i]['id']\n",
     "    name = inputdata.iloc[i]['name']\n",
-    "    if (j == 0):\n",
+    "    if (firtIteration == True):\n",
     "        print(\"Item Id - \" + str(key) + \": \" + name)\n",
     "    #Attempt to get data from API, retry if HTTP error\n",
     "    try:\n",
@@ -201,11 +209,11 @@
     "            print(\"It worked! That was the last item!\")\n",
     "        else:\n",
     "            print(\"It worked! On to the next one.\")\n",
-    "        j = 0\n",
+    "        firtIteration = True\n",
     "    except:\n",
     "        print(\"Got fucked. Trying again. :)\")\n",
     "        time.sleep(1)\n",
-    "        j = 1\n",
+    "        firtIteration = False\n",
     "#Reformat urlquery columns, convert timestamp from miliseconds to seconds, convert timestamp to date, and sort by date\n",
     "for index, row in urlquery.iterrows():\n",
     "    row['data'] = row['data'][['ts','buyingPrice','buyingCompleted','sellingPrice','sellingCompleted','overallPrice','overallCompleted']]\n",
@@ -220,19 +228,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Item ID: 1741\n",
-      "The shape of the Leather input array is: (180, 5)\n",
+      "Item ID: 11802\n",
+      "The shape of the Armadyl godsword input array is: (180, 5)\n",
       "Record completed at test_item position [0]\n",
-      "Item ID: 2\n",
-      "The shape of the Cannonball input array is: (180, 5)\n",
-      "Record completed at test_item position [1]\n"
+      "Item ID: 554\n",
+      "The shape of the Fire rune input array is: (180, 5)\n",
+      "Record completed at test_item position [1]\n",
+      "Item ID: 1761\n",
+      "The shape of the Soft clay input array is: (180, 5)\n",
+      "Record completed at test_item position [2]\n"
      ]
     }
    ],
@@ -271,223 +282,142 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>name</th>\n",
-       "      <th>train_x</th>\n",
-       "      <th>train_y</th>\n",
-       "      <th>test_x</th>\n",
-       "      <th>test_y</th>\n",
-       "      <th>pred_y</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1741</td>\n",
-       "      <td>Leather</td>\n",
-       "      <td>[[1474603200, 140, 20500, 140.0, 12660.0], [14...</td>\n",
-       "      <td>[140, 139, 137, 140, 138, 139, 137, 137, 139, ...</td>\n",
-       "      <td>[[1477195200, 135, 28851, 131.0, 14346.0], [14...</td>\n",
-       "      <td>[133, 143, 135, 133, 138, 141]</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Cannonball</td>\n",
-       "      <td>[[1474603200, 224.0, 2035229.0, 223.0, 1536408...</td>\n",
-       "      <td>[223, 228, 229, 225, 227, 226, 224, 227, 224, ...</td>\n",
-       "      <td>[[1477195200, 216.0, 2252117.0, 214.0, 2200521...</td>\n",
-       "      <td>[215, 215, 216, 215, 216, 216]</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     id        name                                            train_x  \\\n",
-       "0  1741     Leather  [[1474603200, 140, 20500, 140.0, 12660.0], [14...   \n",
-       "1     2  Cannonball  [[1474603200, 224.0, 2035229.0, 223.0, 1536408...   \n",
-       "\n",
-       "                                             train_y  \\\n",
-       "0  [140, 139, 137, 140, 138, 139, 137, 137, 139, ...   \n",
-       "1  [223, 228, 229, 225, 227, 226, 224, 227, 224, ...   \n",
-       "\n",
-       "                                              test_x  \\\n",
-       "0  [[1477195200, 135, 28851, 131.0, 14346.0], [14...   \n",
-       "1  [[1477195200, 216.0, 2252117.0, 214.0, 2200521...   \n",
-       "\n",
-       "                           test_y pred_y  \n",
-       "0  [133, 143, 135, 133, 138, 141]    NaN  \n",
-       "1  [215, 215, 216, 215, 216, 216]    NaN  "
-      ]
-     },
-     "execution_count": 142,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test_item"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1741\n",
-      "Data for Leather:\n",
-      "The shape of the input array is: (180, 5)\n",
-      "     id     name                                            train_x  \\\n",
-      "0  1741  Leather  [[1474603200, 140, 20500, 140.0, 12660.0], [14...   \n",
-      "\n",
-      "                                             train_y  \\\n",
-      "0  [140, 139, 137, 140, 138, 139, 137, 137, 139, ...   \n",
-      "\n",
-      "                                              test_x  \\\n",
-      "0  [[1477195200, 135, 28851, 131.0, 14346.0], [14...   \n",
-      "\n",
-      "                           test_y pred_y  \n",
-      "0  [133, 143, 135, 133, 138, 141]    NaN  \n",
-      "2\n",
-      "Data for Cannonball:\n",
-      "The shape of the input array is: (180, 5)\n",
-      "     id        name                                            train_x  \\\n",
-      "0  1741     Leather  [[1474603200, 140, 20500, 140.0, 12660.0], [14...   \n",
-      "1     2  Cannonball  [[1474603200, 224.0, 2035229.0, 223.0, 1536408...   \n",
-      "\n",
-      "                                             train_y  \\\n",
-      "0  [140, 139, 137, 140, 138, 139, 137, 137, 139, ...   \n",
-      "1  [223, 228, 229, 225, 227, 226, 224, 227, 224, ...   \n",
-      "\n",
-      "                                              test_x  \\\n",
-      "0  [[1477195200, 135, 28851, 131.0, 14346.0], [14...   \n",
-      "1  [[1477195200, 216.0, 2252117.0, 214.0, 2200521...   \n",
-      "\n",
-      "                           test_y pred_y  \n",
-      "0  [133, 143, 135, 133, 138, 141]    NaN  \n",
-      "1  [215, 215, 216, 215, 216, 216]    NaN  \n"
+      "32\n"
      ]
     }
    ],
+   "source": [
+    "# independent variables: Buy price, buy quantity, sell price, sell quantity, time (in seconds/year)\n",
+    "# dependent variable: Overall price (in percent 1-:1)\n",
+    "class Node:\n",
+    "    def __init__(self, incomingEdges=np.array([]), outgoingEdges=np.array([]), inputNodeValue=None, activation=None, bias=0):\n",
+    "        self.incomingEdges = incomingEdges\n",
+    "        self.outgoingEdges = outgoingEdges\n",
+    "        self.inputNodeValue = inputNodeValue\n",
+    "        self.activation = activation\n",
+    "        self.bias = bias\n",
+    "    \n",
+    "    def calculateActivation(self):\n",
+    "        #Iterate through all incoming edges and sum weights\n",
+    "        self.activation = 0\n",
+    "        for edge in self.incomingEdges:\n",
+    "            self.activation += edge.getWeightActivationProduct()\n",
+    "        #Add bias\n",
+    "        self.activation += self.bias\n",
+    "        #Apply activation function\n",
+    "        #self.activation = np.tanh(self.activation)\n",
+    "        \n",
+    "    #Getters\n",
+    "    def getActivation(self):\n",
+    "        return self.activation\n",
+    "    \n",
+    "    def getInputNodeValue(self):\n",
+    "        return self.inputNodeValue\n",
+    "    \n",
+    "    #Utility functions\n",
+    "    def appendOutgoingEdge(self, edge):\n",
+    "        self.outgoingEdges = np.append(self.outgoingEdges, edge)\n",
+    "\n",
+    "    def appendIncomingEdge(self, edge):\n",
+    "        self.incomingEdges = np.append(self.incomingEdges, edge)\n",
+    "\n",
+    "    \n",
+    "            \n",
+    "\n",
+    "class Edge:\n",
+    "    weight = 1\n",
+    "    prevNode = None\n",
+    "    destNode = None\n",
+    "    \n",
+    "    def __init__(self, weight=1, prevNode=None, destNode=None):\n",
+    "        self.weight = weight\n",
+    "        self.prevNode = prevNode\n",
+    "        self.destNode = destNode\n",
+    "    \n",
+    "    def getWeight(self):\n",
+    "        return self.weight\n",
+    "    \n",
+    "    def getWeightActivationProduct(self):\n",
+    "        #If not input node, calc activation. Otherwise, return input value\n",
+    "        if(self.prevNode.getInputNodeValue() == None):\n",
+    "            \n",
+    "            return self.weight * self.prevNode.getActivation()\n",
+    "        return self.weight * self.prevNode.getInputNodeValue()\n",
+    "    \n",
+    "class NeuralNetwork:\n",
+    "    def __init__(self, inputNodes=np.array([]), hiddenNodes=np.array([]), outputNode=Node(), numInputNodes=5, numHiddenLayers=1, numHiddenLayerNodes=16):\n",
+    "        self.inputNodes = inputNodes\n",
+    "        self.hiddenNodes = hiddenNodes\n",
+    "        self.outputNode = outputNode\n",
+    "        self.numInputNodes = numInputNodes\n",
+    "        self.numHiddenLayers = numHiddenLayers\n",
+    "        self.numHiddenLayerNodes = numHiddenLayerNodes\n",
+    "        \n",
+    "    def generateInitialNetwork(self, inputNodeValues):\n",
+    "        #Generate input nodes\n",
+    "        for value in inputNodeValues:\n",
+    "            #Create new input nodes\n",
+    "            newNode = Node(inputNodeValue=value)\n",
+    "            self.inputNodes = np.append(self.inputNodes, newNode)\n",
+    "        #Generate hidden nodes\n",
+    "        for x in range(0, self.numHiddenLayerNodes):\n",
+    "            newNode = Node()\n",
+    "            self.hiddenNodes = np.append(self.hiddenNodes, newNode)\n",
+    "        #Generate output node\n",
+    "        self.outputNode = Node()\n",
+    "        \n",
+    "        #Iterate through each input node, and attach edge to each hidden node\n",
+    "        for inputNode in self.inputNodes:\n",
+    "            for hiddenNode in self.hiddenNodes:\n",
+    "                #Create outgoing edge with random weight\n",
+    "                newEdge = Edge(weight=1, prevNode=inputNode, destNode=hiddenNode)\n",
+    "                inputNode.appendOutgoingEdge(newEdge)\n",
+    "                hiddenNode.appendIncomingEdge(newEdge)\n",
+    "                \n",
+    "        #Connect each hidden layer node to the output node\n",
+    "        for hiddenNode in self.hiddenNodes:\n",
+    "            edgeToOutput = Edge(weight=1, prevNode=hiddenNode, destNode=self.outputNode)\n",
+    "            hiddenNode.appendOutgoingEdge(edgeToOutput)\n",
+    "            self.outputNode.appendIncomingEdge(edgeToOutput)\n",
+    "            \n",
+    "    def calculateNodeActivations(self):\n",
+    "        #Start with input nodes\n",
+    "        for inputNode in self.inputNodes:\n",
+    "            inputNode.calculateActivation()\n",
+    "        #Get activation of hidden layer nodes\n",
+    "        for hiddenNode in self.hiddenNodes:\n",
+    "            hiddenNode.calculateActivation()\n",
+    "        #Lastly, calculate output node activation\n",
+    "        self.outputNode.calculateActivation()\n",
+    " \n",
+    "            \n",
+    "nn = NeuralNetwork()\n",
+    "nn.generateInitialNetwork([1,1])\n",
+    "nn.calculateNodeActivations()\n",
+    "print(nn.outputNode.getActivation())\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>name</th>\n",
-       "      <th>train_x</th>\n",
-       "      <th>train_y</th>\n",
-       "      <th>test_x</th>\n",
-       "      <th>test_y</th>\n",
-       "      <th>pred_y</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1741</td>\n",
-       "      <td>Leather</td>\n",
-       "      <td>[[1474603200, 140, 20500, 140.0, 12660.0], [14...</td>\n",
-       "      <td>[140, 139, 137, 140, 138, 139, 137, 137, 139, ...</td>\n",
-       "      <td>[[1477195200, 135, 28851, 131.0, 14346.0], [14...</td>\n",
-       "      <td>[133, 143, 135, 133, 138, 141]</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Cannonball</td>\n",
-       "      <td>[[1474603200, 224.0, 2035229.0, 223.0, 1536408...</td>\n",
-       "      <td>[223, 228, 229, 225, 227, 226, 224, 227, 224, ...</td>\n",
-       "      <td>[[1477195200, 216.0, 2252117.0, 214.0, 2200521...</td>\n",
-       "      <td>[215, 215, 216, 215, 216, 216]</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     id        name                                            train_x  \\\n",
-       "0  1741     Leather  [[1474603200, 140, 20500, 140.0, 12660.0], [14...   \n",
-       "1     2  Cannonball  [[1474603200, 224.0, 2035229.0, 223.0, 1536408...   \n",
-       "\n",
-       "                                             train_y  \\\n",
-       "0  [140, 139, 137, 140, 138, 139, 137, 137, 139, ...   \n",
-       "1  [223, 228, 229, 225, 227, 226, 224, 227, 224, ...   \n",
-       "\n",
-       "                                              test_x  \\\n",
-       "0  [[1477195200, 135, 28851, 131.0, 14346.0], [14...   \n",
-       "1  [[1477195200, 216.0, 2252117.0, 214.0, 2200521...   \n",
-       "\n",
-       "                           test_y pred_y  \n",
-       "0  [133, 143, 135, 133, 138, 141]    NaN  \n",
-       "1  [215, 215, 216, 215, 216, 216]    NaN  "
-      ]
-     },
-     "execution_count": 140,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test_item"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -515,7 +445,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
