--- a/RNNReLU.ipynb
+++ b/RNNReLU.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import urllib\n",
@@ -16,7 +14,10 @@
     "import datetime\n",
     "import time\n",
     "import math\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from node import Node\n",
+    "from edge import Edge\n",
+    "from neural_network import NeuralNetwork"
    ]
   },
   {
@@ -282,142 +283,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "32\n"
+      "48\n"
      ]
     }
    ],
    "source": [
-    "# independent variables: Buy price, buy quantity, sell price, sell quantity, time (in seconds/year)\n",
-    "# dependent variable: Overall price (in percent 1-:1)\n",
-    "class Node:\n",
-    "    def __init__(self, incomingEdges=np.array([]), outgoingEdges=np.array([]), inputNodeValue=None, activation=None, bias=0):\n",
-    "        self.incomingEdges = incomingEdges\n",
-    "        self.outgoingEdges = outgoingEdges\n",
-    "        self.inputNodeValue = inputNodeValue\n",
-    "        self.activation = activation\n",
-    "        self.bias = bias\n",
-    "    \n",
-    "    def calculateActivation(self):\n",
-    "        #Iterate through all incoming edges and sum weights\n",
-    "        self.activation = 0\n",
-    "        for edge in self.incomingEdges:\n",
-    "            self.activation += edge.getWeightActivationProduct()\n",
-    "        #Add bias\n",
-    "        self.activation += self.bias\n",
-    "        #Apply activation function\n",
-    "        #self.activation = np.tanh(self.activation)\n",
-    "        \n",
-    "    #Getters\n",
-    "    def getActivation(self):\n",
-    "        return self.activation\n",
-    "    \n",
-    "    def getInputNodeValue(self):\n",
-    "        return self.inputNodeValue\n",
-    "    \n",
-    "    #Utility functions\n",
-    "    def appendOutgoingEdge(self, edge):\n",
-    "        self.outgoingEdges = np.append(self.outgoingEdges, edge)\n",
-    "\n",
-    "    def appendIncomingEdge(self, edge):\n",
-    "        self.incomingEdges = np.append(self.incomingEdges, edge)\n",
-    "\n",
-    "    \n",
-    "            \n",
-    "\n",
-    "class Edge:\n",
-    "    weight = 1\n",
-    "    prevNode = None\n",
-    "    destNode = None\n",
-    "    \n",
-    "    def __init__(self, weight=1, prevNode=None, destNode=None):\n",
-    "        self.weight = weight\n",
-    "        self.prevNode = prevNode\n",
-    "        self.destNode = destNode\n",
-    "    \n",
-    "    def getWeight(self):\n",
-    "        return self.weight\n",
-    "    \n",
-    "    def getWeightActivationProduct(self):\n",
-    "        #If not input node, calc activation. Otherwise, return input value\n",
-    "        if(self.prevNode.getInputNodeValue() == None):\n",
-    "            \n",
-    "            return self.weight * self.prevNode.getActivation()\n",
-    "        return self.weight * self.prevNode.getInputNodeValue()\n",
-    "    \n",
-    "class NeuralNetwork:\n",
-    "    def __init__(self, inputNodes=np.array([]), hiddenNodes=np.array([]), outputNode=Node(), numInputNodes=5, numHiddenLayers=1, numHiddenLayerNodes=16):\n",
-    "        self.inputNodes = inputNodes\n",
-    "        self.hiddenNodes = hiddenNodes\n",
-    "        self.outputNode = outputNode\n",
-    "        self.numInputNodes = numInputNodes\n",
-    "        self.numHiddenLayers = numHiddenLayers\n",
-    "        self.numHiddenLayerNodes = numHiddenLayerNodes\n",
-    "        \n",
-    "    def generateInitialNetwork(self, inputNodeValues):\n",
-    "        #Generate input nodes\n",
-    "        for value in inputNodeValues:\n",
-    "            #Create new input nodes\n",
-    "            newNode = Node(inputNodeValue=value)\n",
-    "            self.inputNodes = np.append(self.inputNodes, newNode)\n",
-    "        #Generate hidden nodes\n",
-    "        for x in range(0, self.numHiddenLayerNodes):\n",
-    "            newNode = Node()\n",
-    "            self.hiddenNodes = np.append(self.hiddenNodes, newNode)\n",
-    "        #Generate output node\n",
-    "        self.outputNode = Node()\n",
-    "        \n",
-    "        #Iterate through each input node, and attach edge to each hidden node\n",
-    "        for inputNode in self.inputNodes:\n",
-    "            for hiddenNode in self.hiddenNodes:\n",
-    "                #Create outgoing edge with random weight\n",
-    "                newEdge = Edge(weight=1, prevNode=inputNode, destNode=hiddenNode)\n",
-    "                inputNode.appendOutgoingEdge(newEdge)\n",
-    "                hiddenNode.appendIncomingEdge(newEdge)\n",
-    "                \n",
-    "        #Connect each hidden layer node to the output node\n",
-    "        for hiddenNode in self.hiddenNodes:\n",
-    "            edgeToOutput = Edge(weight=1, prevNode=hiddenNode, destNode=self.outputNode)\n",
-    "            hiddenNode.appendOutgoingEdge(edgeToOutput)\n",
-    "            self.outputNode.appendIncomingEdge(edgeToOutput)\n",
-    "            \n",
-    "    def calculateNodeActivations(self):\n",
-    "        #Start with input nodes\n",
-    "        for inputNode in self.inputNodes:\n",
-    "            inputNode.calculateActivation()\n",
-    "        #Get activation of hidden layer nodes\n",
-    "        for hiddenNode in self.hiddenNodes:\n",
-    "            hiddenNode.calculateActivation()\n",
-    "        #Lastly, calculate output node activation\n",
-    "        self.outputNode.calculateActivation()\n",
-    " \n",
-    "            \n",
+    "#Test the creation of a neural network\n",
     "nn = NeuralNetwork()\n",
-    "nn.generateInitialNetwork([1,1])\n",
+    "nn.generateInitialNetwork([1,1,1])\n",
     "nn.calculateNodeActivations()\n",
     "print(nn.outputNode.getActivation())\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -445,7 +329,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
